--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
           <li class="contacts-item">
             <a class="contacts-link" href="mailto:info@devstudio.com">
               <svg class="contacts-icon" width="16" height="12">
-                <use
-                  href="../images/background/symbol-defs.svg#icon-envelope"
-                ></use>
+                <use href="../images/background/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
             >
@@ -57,7 +55,7 @@
             <a class="contacts-link" href="tel:+380961111111">
               <svg class="contacts-icon" width="10" height="16">
                 <use
-                  href="../images/background/symbol-defs.svg#icon-smartphone"
+                  href="../images/background/icons.svg#icon-smartphone"
                 ></use>
               </svg>
               +38 096 111 11 11</a
@@ -85,7 +83,7 @@
               <div class="description-icon">
                 <svg class="icon">
                   <use
-                    href="./images/background/symbol-defs.svg#icon-antenna-1"
+                    href="./images/background/icons.svg#icon-antenna-1"
                   ></use>
                 </svg>
               </div>
@@ -99,9 +97,7 @@
             <li class="grid-item">
               <div class="description-icon">
                 <svg class="icon">
-                  <use
-                    href="./images/background/symbol-defs.svg#icon-clock-1"
-                  ></use>
+                  <use href="./images/background/icons.svg#icon-clock-1"></use>
                 </svg>
               </div>
               <h3 class="subtitle">Пунктуальность</h3>
@@ -115,7 +111,7 @@
               <div class="description-icon">
                 <svg class="icon">
                   <use
-                    href="./images/background/symbol-defs.svg#icon-diagram-1"
+                    href="./images/background/icons.svg#icon-diagram-1"
                   ></use>
                 </svg>
               </div>
@@ -130,7 +126,7 @@
               <div class="description-icon">
                 <svg class="icon">
                   <use
-                    href="./images/background/symbol-defs.svg#icon-astronaut-1"
+                    href="./images/background/icons.svg#icon-astronaut-1"
                   ></use>
                 </svg>
               </div>
@@ -195,40 +191,40 @@
               </div>
               <ul class="networks list">
                 <li class="networks-item">
-                  <a class="networks-link" href="/">
+                  <a class="networks-link" href="/" rel="noreferrer noopener">
                     <svg class="networks-icon">
                       <use
-                        href="../images/background/symbol-defs.svg#icon-instagram-2"
+                        href="../images/background/icons.svg#icon-instagram-2"
                       ></use>
                     </svg>
                   </a>
                 </li>
 
                 <li class="networks-item">
-                  <a class="networks-link" href="/">
+                  <a class="networks-link" href="/" rel="noreferrer noopener">
                     <svg class="networks-icon">
                       <use
-                        href="../images/background/symbol-defs.svg#icon-twitter-1"
+                        href="../images/background/icons.svg#icon-twitter-1"
                       ></use>
                     </svg>
                   </a>
                 </li>
 
                 <li class="networks-item">
-                  <a class="networks-link" href="/">
+                  <a class="networks-link" href="/" rel="noreferrer noopener">
                     <svg class="networks-icon">
                       <use
-                        href="../images/background/symbol-defs.svg#icon-facebook-1"
+                        href="../images/background/icons.svg#icon-facebook-1"
                       ></use>
                     </svg>
                   </a>
                 </li>
 
                 <li class="networks-item">
-                  <a class="networks-link" href="/">
+                  <a class="networks-link" href="/" rel="noreferrer noopener">
                     <svg class="networks-icon">
                       <use
-                        href="../images/background/symbol-defs.svg#icon-linkedin-1"
+                        href="../images/background/icons.svg#icon-linkedin-1"
                       ></use>
                     </svg>
                   </a>
@@ -249,40 +245,40 @@
               </div>
               <ul class="networks list">
                 <li class="networks-item">
-                  <a class="networks-link" href="/">
+                  <a class="networks-link" href="/" rel="noreferrer noopener">
                     <svg class="networks-icon">
                       <use
-                        href="../images/background/symbol-defs.svg#icon-instagram-2"
+                        href="../images/background/icons.svg#icon-instagram-2"
                       ></use>
                     </svg>
                   </a>
                 </li>
 
                 <li class="networks-item">
-                  <a class="networks-link" href="/">
+                  <a class="networks-link" href="/" rel="noreferrer noopener">
                     <svg class="networks-icon">
                       <use
-                        href="../images/background/symbol-defs.svg#icon-twitter-1"
+                        href="../images/background/icons.svg#icon-twitter-1"
                       ></use>
                     </svg>
                   </a>
                 </li>
 
                 <li class="networks-item">
-                  <a class="networks-link" href="/">
+                  <a class="networks-link" href="/" rel="noreferrer noopener">
                     <svg class="networks-icon">
                       <use
-                        href="../images/background/symbol-defs.svg#icon-facebook-1"
+                        href="../images/background/icons.svg#icon-facebook-1"
                       ></use>
                     </svg>
                   </a>
                 </li>
 
                 <li class="networks-item">
-                  <a class="networks-link" href="/">
+                  <a class="networks-link" href="/" rel="noreferrer noopener">
                     <svg class="networks-icon">
                       <use
-                        href="../images/background/symbol-defs.svg#icon-linkedin-1"
+                        href="../images/background/icons.svg#icon-linkedin-1"
                       ></use>
                     </svg>
                   </a>
@@ -303,40 +299,40 @@
               </div>
               <ul class="networks list">
                 <li class="networks-item">
-                  <a class="networks-link" href="/">
+                  <a class="networks-link" href="/" rel="noreferrer noopener">
                     <svg class="networks-icon">
                       <use
-                        href="../images/background/symbol-defs.svg#icon-instagram-2"
+                        href="../images/background/icons.svg#icon-instagram-2"
                       ></use>
                     </svg>
                   </a>
                 </li>
 
                 <li class="networks-item">
-                  <a class="networks-link" href="/">
+                  <a class="networks-link" href="/" rel="noreferrer noopener">
                     <svg class="networks-icon">
                       <use
-                        href="../images/background/symbol-defs.svg#icon-twitter-1"
+                        href="../images/background/icons.svg#icon-twitter-1"
                       ></use>
                     </svg>
                   </a>
                 </li>
 
                 <li class="networks-item">
-                  <a class="networks-link" href="/">
+                  <a class="networks-link" href="/" rel="noreferrer noopener">
                     <svg class="networks-icon">
                       <use
-                        href="../images/background/symbol-defs.svg#icon-facebook-1"
+                        href="../images/background/icons.svg#icon-facebook-1"
                       ></use>
                     </svg>
                   </a>
                 </li>
 
                 <li class="networks-item">
-                  <a class="networks-link" href="/">
+                  <a class="networks-link" href="/" rel="noreferrer noopener">
                     <svg class="networks-icon">
                       <use
-                        href="../images/background/symbol-defs.svg#icon-linkedin-1"
+                        href="../images/background/icons.svg#icon-linkedin-1"
                       ></use>
                     </svg>
                   </a>
@@ -357,40 +353,40 @@
               </div>
               <ul class="networks list">
                 <li class="networks-item">
-                  <a class="networks-link" href="/">
+                  <a class="networks-link" href="/" rel="noreferrer noopener">
                     <svg class="networks-icon">
                       <use
-                        href="../images/background/symbol-defs.svg#icon-instagram-2"
+                        href="../images/background/icons.svg#icon-instagram-2"
                       ></use>
                     </svg>
                   </a>
                 </li>
 
                 <li class="networks-item">
-                  <a class="networks-link" href="/">
+                  <a class="networks-link" href="/" rel="noreferrer noopener">
                     <svg class="networks-icon">
                       <use
-                        href="../images/background/symbol-defs.svg#icon-twitter-1"
+                        href="../images/background/icons.svg#icon-twitter-1"
                       ></use>
                     </svg>
                   </a>
                 </li>
 
                 <li class="networks-item">
-                  <a class="networks-link" href="/">
+                  <a class="networks-link" href="/" rel="noreferrer noopener">
                     <svg class="networks-icon">
                       <use
-                        href="../images/background/symbol-defs.svg#icon-facebook-1"
+                        href="../images/background/icons.svg#icon-facebook-1"
                       ></use>
                     </svg>
                   </a>
                 </li>
 
                 <li class="networks-item">
-                  <a class="networks-link" href="/">
+                  <a class="networks-link" href="/" rel="noreferrer noopener">
                     <svg class="networks-icon">
                       <use
-                        href="../images/background/symbol-defs.svg#icon-linkedin-1"
+                        href="../images/background/icons.svg#icon-linkedin-1"
                       ></use>
                     </svg>
                   </a>
@@ -400,35 +396,122 @@
           </ul>
         </div>
       </section>
-      <section>
-        <h2>Постоянные клиенты</h2>
-        <ul>
-          <li>
-            <a href="/">
-              <svg>
-                <use
-                  href="../images/background/symbol-defs.svg#icon-logo-1"
-                ></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+      <!-- Постоянные клиенты -->
+      <section class="clients">
+        <div class="container">
+          <h2 class="title">Постоянные клиенты</h2>
+          <ul class="clients-list list">
+            <li class="clients-item">
+              <a class="clients-link" href="/" rel="noreferrer noopener">
+                <svg class="clients-icon" width="44" height="49">
+                  <use href="../images/background/icons.svg#icon-logo-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a class="clients-link" href="/" rel="noreferrer noopener">
+                <svg class="clients-icon" width="40" height="52">
+                  <use href="../images/background/icons.svg#icon-logo-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a class="clients-link" href="/" rel="noreferrer noopener">
+                <svg class="clients-icon" width="41" height="43">
+                  <use href="../images/background/icons.svg#icon-logo-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a class="clients-link" href="/" rel="noreferrer noopener">
+                <svg class="clients-icon" width="80 " height="42">
+                  <use href="../images/background/icons.svg#icon-logo-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a class="clients-link" href="/" rel="noreferrer noopener">
+                <svg class="clients-icon" width="59" height="47">
+                  <use href="../images/background/icons.svg#icon-logo-5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a class="clients-link" href="/" rel="noreferrer noopener">
+                <svg class="clients-icon" width="88" height="45">
+                  <use href="../images/background/icons.svg#icon-logo-6"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- Подвал страницы -->
     <footer class="footer">
       <div class="container">
-        <a class="logo" href="./index.html"
-          >Web<span class="tiny">Studio</span></a
-        >
+        <div class="footer-wrap">
+          <section class="footer-adress">
+            <h2 class="visually-hidden">Адрес</h2>
+            <a class="logo" href="./index.html"
+              >Web<span class="tiny">Studio</span></a
+            >
 
-        <address>
-          <p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
-          <a class="address-item" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-          <a class="address-item" href="tel:+380961111111">+38 096 111 11 11</a>
-        </address>
+            <address>
+              <p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
+              <a class="address-item" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+              <a class="address-item" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </address>
+          </section>
+          <section class="footer-networks">
+            <h2 class="footer-networks-title">присоединяйтесь</h2>
+            <ul class="networks list">
+              <li class="networks-item">
+                <a class="networks-link" href="/">
+                  <svg class="networks-icon">
+                    <use
+                      href="../images/background/icons.svg#icon-instagram-2"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+
+              <li class="networks-item">
+                <a class="networks-link" href="/" rel="noreferrer noopener">
+                  <svg class="networks-icon">
+                    <use
+                      href="../images/background/icons.svg#icon-twitter-1"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+
+              <li class="networks-item">
+                <a class="networks-link" href="/" rel="noreferrer noopener">
+                  <svg class="networks-icon">
+                    <use
+                      href="../images/background/icons.svg#icon-facebook-1"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+
+              <li class="networks-item">
+                <a class="networks-link" href="/" rel="noreferrer noopener">
+                  <svg class="networks-icon">
+                    <use
+                      href="../images/background/icons.svg#icon-linkedin-1"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </section>
+        </div>
       </div>
     </footer>
   </body>
