--- a/portfolio.html
+++ b/portfolio.html
@@ -47,9 +47,7 @@
           <li class="contacts-item">
             <a class="contacts-link" href="mailto:info@devstudio.com">
               <svg class="contacts-icon" width="16" height="12">
-                <use
-                  href="../images/background/symbol-defs.svg#icon-envelope"
-                ></use>
+                <use href="../images/background/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
             >
@@ -58,7 +56,7 @@
             <a class="contacts-link" href="tel:+380961111111">
               <svg class="contacts-icon" width="10" height="16">
                 <use
-                  href="../images/background/symbol-defs.svg#icon-smartphone"
+                  href="../images/background/icons.svg#icon-smartphone"
                 ></use>
               </svg>
               +38 096 111 11 11</a
@@ -101,120 +99,158 @@
 
           <ul class="list grid">
             <li class="gallery-item grid-item">
-              <img
-                src="./images/Portfolio/tehnokryak.jpg"
-                width="370"
-                height="294"
-                alt="Ноутбук"
-              />
-              <div class="gallery-container">
-                <h3 class="gallery-title">Технокряк</h3>
-                <p class="gallery-text">Веб-сайт</p>
-              </div>
+              <a class="gallery-link" href="/">
+                <div class="gallery-wrap">
+                  <img
+                    src="./images/Portfolio/tehnokryak.jpg"
+                    width="370"
+                    height="294"
+                    alt="Ноутбук"
+                  />
+                  <div class="gallery-container">
+                    <h3 class="gallery-title">Технокряк</h3>
+                    <p class="gallery-text">Веб-сайт</p>
+                  </div>
+                </div>
+              </a>
             </li>
 
             <li class="gallery-item grid-item">
-              <img
-                src="./images/Portfolio/neworlean.jpg"
-                width="370"
-                height="294"
-                alt="Два парня играют в баскутбол"
-              />
-              <div class="gallery-container">
-                <h3 class="gallery-title">Постер New Orlean vs Golden Star</h3>
-                <p class="gallery-text">Дизайн</p>
-              </div>
+              <a class="gallery-link" href="/">
+                <div class="gallery-wrap">
+                  <img
+                    src="./images/Portfolio/neworlean.jpg"
+                    width="370"
+                    height="294"
+                    alt="Два парня играют в баскутбол"
+                  />
+                  <div class="gallery-container">
+                    <h3 class="gallery-title">
+                      Постер New Orlean vs Golden Star
+                    </h3>
+                    <p class="gallery-text">Дизайн</p>
+                  </div>
+                </div>
+              </a>
             </li>
 
             <li class="gallery-item grid-item">
-              <img
-                src="./images/Portfolio/seafood.jpg"
-                width="370"
-                height="294"
-                alt="Логотип ресторана Seafood "
-              />
-              <div class="gallery-container">
-                <h3 class="gallery-title">Ресторан Seafood</h3>
-                <p class="gallery-text">Приложение</p>
-              </div>
+              <a class="gallery-link" href="/">
+                <div class="gallery-wrap">
+                  <img
+                    src="./images/Portfolio/seafood.jpg"
+                    width="370"
+                    height="294"
+                    alt="Логотип ресторана Seafood "
+                  />
+                  <div class="gallery-container">
+                    <h3 class="gallery-title">Ресторан Seafood</h3>
+                    <p class="gallery-text">Приложение</p>
+                  </div>
+                </div>
+              </a>
             </li>
 
             <li class="gallery-item grid-item">
-              <img
-                src="./images/Portfolio/prime.jpg"
-                width="370"
-                height="294"
-                alt="Наушники"
-              />
-              <div class="gallery-container">
-                <h3 class="gallery-title">Проект Prime</h3>
-                <p class="gallery-text">Маркетинг</p>
-              </div>
+              <a class="gallery-link" href="/">
+                <div class="gallery-wrap">
+                  <img
+                    src="./images/Portfolio/prime.jpg"
+                    width="370"
+                    height="294"
+                    alt="Наушники"
+                  />
+                  <div class="gallery-container">
+                    <h3 class="gallery-title">Проект Prime</h3>
+                    <p class="gallery-text">Маркетинг</p>
+                  </div>
+                </div>
+              </a>
             </li>
 
             <li class="gallery-item grid-item">
-              <img
-                src="./images/Portfolio/boxes.jpg"
-                width="370"
-                height="294"
-                alt="Две картонные коробки"
-              />
-              <div class="gallery-container">
-                <h3 class="gallery-title">Проект Boxes</h3>
-                <p class="gallery-text">Приложение</p>
-              </div>
+              <a class="gallery-link" href="/">
+                <div class="gallery-wrap">
+                  <img
+                    src="./images/Portfolio/boxes.jpg"
+                    width="370"
+                    height="294"
+                    alt="Две картонные коробки"
+                  />
+                  <div class="gallery-container">
+                    <h3 class="gallery-title">Проект Boxes</h3>
+                    <p class="gallery-text">Приложение</p>
+                  </div>
+                </div>
+              </a>
             </li>
 
             <li class="gallery-item grid-item">
-              <img
-                src="./images/Portfolio/inspiration-has-no-borders.jpg"
-                width="370"
-                height="294"
-                alt="Манитор"
-              />
-              <div class="gallery-container">
-                <h3 class="gallery-title">Inspiration has no Borders</h3>
-                <p class="gallery-text">Веб-сайт</p>
-              </div>
+              <a class="gallery-link" href="/">
+                <div class="gallery-wrap">
+                  <img
+                    src="./images/Portfolio/inspiration-has-no-borders.jpg"
+                    width="370"
+                    height="294"
+                    alt="Манитор"
+                  />
+                  <div class="gallery-container">
+                    <h3 class="gallery-title">Inspiration has no Borders</h3>
+                    <p class="gallery-text">Веб-сайт</p>
+                  </div>
+                </div>
+              </a>
             </li>
 
             <li class="gallery-item grid-item">
-              <img
-                src="./images/Portfolio/limited-edition.jpg"
-                width="370"
-                height="294"
-                alt="Открытый журнал"
-              />
-              <div class="gallery-container">
-                <h3 class="gallery-title">Издание Limited Edition</h3>
-                <p class="gallery-text">Дизайн</p>
-              </div>
+              <a class="gallery-link" href="/">
+                <div class="gallery-wrap">
+                  <img
+                    src="./images/Portfolio/limited-edition.jpg"
+                    width="370"
+                    height="294"
+                    alt="Открытый журнал"
+                  />
+                  <div class="gallery-container">
+                    <h3 class="gallery-title">Издание Limited Edition</h3>
+                    <p class="gallery-text">Дизайн</p>
+                  </div>
+                </div>
+              </a>
             </li>
 
             <li class="gallery-item grid-item">
-              <img
-                src="./images/Portfolio/lab.jpg"
-                width="370"
-                height="294"
-                alt="Этикетка"
-              />
-              <div class="gallery-container">
-                <h3 class="gallery-title">Проект LAB</h3>
-                <p class="gallery-text">Маркетинг</p>
-              </div>
+              <a class="gallery-link" href="/">
+                <div class="gallery-wrap">
+                  <img
+                    src="./images/Portfolio/lab.jpg"
+                    width="370"
+                    height="294"
+                    alt="Этикетка"
+                  />
+                  <div class="gallery-container">
+                    <h3 class="gallery-title">Проект LAB</h3>
+                    <p class="gallery-text">Маркетинг</p>
+                  </div>
+                </div>
+              </a>
             </li>
 
             <li class="gallery-item grid-item">
-              <img
-                src="./images/Portfolio/growing-business.jpg"
-                width="370"
-                height="294"
-                alt="Человек работает на компьютере"
-              />
-              <div class="gallery-container">
-                <h3 class="gallery-title">Growing Business</h3>
-                <p class="gallery-text">Приложение</p>
-              </div>
+              <a class="gallery-link" href="/">
+                <div class="gallery-wrap">
+                  <img
+                    src="./images/Portfolio/growing-business.jpg"
+                    width="370"
+                    height="294"
+                    alt="Человек работает на компьютере"
+                  />
+                  <div class="gallery-container">
+                    <h3 class="gallery-title">Growing Business</h3>
+                    <p class="gallery-text">Приложение</p>
+                  </div>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
@@ -224,17 +260,68 @@
     <!-- Подвал страницы -->
     <footer class="footer">
       <div class="container">
-        <a class="logo" href="./index.html"
-          >Web<span class="tiny">Studio</span></a
-        >
+        <div class="footer-wrap">
+          <section class="footer-adress">
+            <h2 class="visually-hidden">Адрес</h2>
+            <a class="logo" href="./index.html"
+              >Web<span class="tiny">Studio</span></a
+            >
 
-        <address>
-          <p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
-          <a class="address-item" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-          <a class="address-item" href="tel:+380961111111">+38 096 111 11 11</a>
-        </address>
+            <address>
+              <p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
+              <a class="address-item" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+              <a class="address-item" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </address>
+          </section>
+          <section class="footer-networks">
+            <h2 class="footer-networks-title">присоединяйтесь</h2>
+            <ul class="networks list">
+              <li class="networks-item">
+                <a class="networks-link" href="/" rel="noreferrer noopener">
+                  <svg class="networks-icon">
+                    <use
+                      href="../images/background/icons.svg#icon-instagram-2"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+
+              <li class="networks-item">
+                <a class="networks-link" href="/" rel="noreferrer noopener">
+                  <svg class="networks-icon">
+                    <use
+                      href="../images/background/icons.svg#icon-twitter-1"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+
+              <li class="networks-item">
+                <a class="networks-link" href="/" rel="noreferrer noopener">
+                  <svg class="networks-icon">
+                    <use
+                      href="../images/background/icons.svg#icon-facebook-1"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+
+              <li class="networks-item">
+                <a class="networks-link" href="/" rel="noreferrer noopener">
+                  <svg class="networks-icon">
+                    <use
+                      href="../images/background/icons.svg#icon-linkedin-1"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </section>
+        </div>
       </div>
     </footer>
   </body>
